--- a/app/src/main/res/layout/adapter_app_drawer.xml
+++ b/app/src/main/res/layout/adapter_app_drawer.xml
@@ -27,95 +27,94 @@
         android:src="@drawable/ic_rounded"
         app:tint="?attr/primaryColor" />
 
-    <LinearLayout
+    <HorizontalScrollView
         android:id="@+id/appHideLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginVertical="1dp"
-        android:animateLayoutChanges="true"
-        android:background="?attr/primaryShadeDarkColor"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="end|center_vertical"
         android:visibility="gone"
-        tools:visibility="visible">
+        android:fillViewport="true"
+        tools:visibility="gone">
 
-        <TextView
-            android:id="@+id/appDelete"
-            style="@style/TextSmall"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawablePadding="2dp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingHorizontal="8dp"
-            android:text="@string/delete"
-            android:textSize="12sp"
-            app:drawableTopCompat="@drawable/ic_delete" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="1dp"
+            android:animateLayoutChanges="true"
+            android:background="?attr/primaryShadeDarkColor"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="end|center_vertical">
 
-        <TextView
-            android:id="@+id/appRename"
-            style="@style/TextSmall"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawablePadding="2dp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingHorizontal="8dp"
-            android:text="@string/rename"
-            android:textSize="12sp"
-            app:drawableTopCompat="@drawable/ic_rename" />
+            <TextView
+                android:id="@+id/appDelete"
+                style="@style/AppMenuEntry"
+                android:text="@string/delete"
+                app:drawableTopCompat="@drawable/ic_delete"
+                app:layout_constraintBaseline_toBaselineOf="@+id/appRename"
+                app:layout_constraintEnd_toStartOf="@+id/appRename"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintDimensionRatio="1"/>
 
-        <TextView
-            android:id="@+id/appHide"
-            style="@style/TextSmall"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawablePadding="2dp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingHorizontal="8dp"
-            android:text="@string/hide"
-            android:textSize="12sp"
-            app:drawableTopCompat="@drawable/ic_hide" />
+            <TextView
+                android:id="@+id/appRename"
+                style="@style/AppMenuEntry"
+                android:text="@string/rename"
+                app:drawableTopCompat="@drawable/ic_rename"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/appHide"
+                app:layout_constraintStart_toEndOf="@+id/appDelete"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintDimensionRatio="1"/>
 
-        <TextView
-            android:id="@+id/appInfo"
-            style="@style/TextSmall"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawablePadding="2dp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingHorizontal="8dp"
-            android:text="@string/info"
-            android:textSize="12sp"
-            app:drawableTopCompat="@drawable/ic_info" />
+            <TextView
+                android:id="@+id/appHide"
+                style="@style/AppMenuEntry"
+                android:layout_width="0dp"
+                android:text="@string/hide"
+                app:drawableTopCompat="@drawable/ic_hide"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/appInfo"
+                app:layout_constraintStart_toEndOf="@+id/appRename"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintDimensionRatio="1"/>
 
-        <TextView
-            android:id="@+id/appMenuClose"
-            style="@style/TextSmall"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawablePadding="2dp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingHorizontal="8dp"
-            android:text="@string/close"
-            android:textSize="12sp"
-            app:drawableTopCompat="@drawable/ic_close" />
+            <TextView
+                android:id="@+id/appInfo"
+                style="@style/AppMenuEntry"
+                android:text="@string/info"
+                app:drawableTopCompat="@drawable/ic_info"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/appChangeDelay"
+                app:layout_constraintStart_toEndOf="@+id/appHide"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintDimensionRatio="1"/>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/appChangeDelay"
+                style="@style/AppMenuEntry"
+                android:text="@string/delay"
+                app:drawableTopCompat="@drawable/ic_delay"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/appMenuClose"
+                app:layout_constraintStart_toEndOf="@+id/appInfo"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintDimensionRatio="1"/>
+
+            <TextView
+                android:id="@+id/appMenuClose"
+                style="@style/AppMenuEntry"
+                android:text="@string/close"
+                app:drawableTopCompat="@drawable/ic_close"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/appChangeDelay"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintDimensionRatio="1" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </HorizontalScrollView>
 
     <LinearLayout
         android:id="@+id/renameLayout"
@@ -174,5 +173,156 @@
             android:textSize="12sp"
             app:drawableTopCompat="@drawable/ic_close" />
     </LinearLayout>
+
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/appChangeDelayLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:animateLayoutChanges="true"-->
+<!--        android:clickable="true"-->
+<!--        android:focusable="true"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:visibility="gone"-->
+<!--        android:layout_gravity="center"-->
+<!--        tools:visibility="gone">-->
+
+<!--        <NumberPicker-->
+<!--            android:id="@+id/minutesPicker"-->
+<!--            android:layout_width="60dp"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:layout_gravity="end|center_vertical"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:scaleX="0.8"-->
+<!--            android:scaleY="0.8"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textView"-->
+<!--            style="@style/TextSmall"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end|center_vertical"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:text="@string/minutes"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/minutesPicker"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <NumberPicker-->
+<!--            android:id="@+id/secondsPicker"-->
+<!--            android:layout_width="60dp"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:scaleX="0.8"-->
+<!--            android:scaleY="0.8"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/textView"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textView2"-->
+<!--            style="@style/TextSmall"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end|center_vertical"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:text="@string/seconds"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/secondsPicker"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/applyDelayChange"-->
+<!--            style="@style/TextSmall"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center_vertical|start"-->
+<!--            android:drawablePadding="2dp"-->
+<!--            android:ellipsize="end"-->
+<!--            android:gravity="center"-->
+<!--            android:maxLines="1"-->
+<!--            android:paddingHorizontal="8dp"-->
+<!--            android:text="@string/apply"-->
+<!--            android:textSize="12sp"-->
+<!--            app:drawableTopCompat="@drawable/ic_check"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/closeDelayChange"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/textView2"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/closeDelayChange"-->
+<!--            style="@style/TextSmall"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end|center_vertical"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:drawablePadding="2dp"-->
+<!--            android:ellipsize="end"-->
+<!--            android:gravity="center"-->
+<!--            android:maxLines="1"-->
+<!--            android:paddingHorizontal="8dp"-->
+<!--            android:text="@string/close"-->
+<!--            android:textSize="12sp"-->
+<!--            app:drawableTopCompat="@drawable/ic_close"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/openWithDelayLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:animateLayoutChanges="true"-->
+<!--        android:clickable="true"-->
+<!--        android:focusable="true"-->
+<!--        android:gravity="end|center_vertical"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:visibility="gone"-->
+<!--        android:paddingHorizontal="20dp"-->
+<!--        tools:visibility="visible">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/app_delay_message"-->
+<!--            style="@style/TextSmall"-->
+<!--            android:layout_gravity="center|start"-->
+<!--            android:layout_weight="1"/>-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/openDelayedApp"-->
+<!--            style="@style/TextSmall"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:drawablePadding="2dp"-->
+<!--            android:ellipsize="end"-->
+<!--            android:gravity="center"-->
+<!--            android:maxLines="1"-->
+<!--            android:paddingHorizontal="8dp"-->
+<!--            android:text="@string/yes"-->
+<!--            android:textSize="12sp"-->
+<!--            app:drawableTopCompat="@drawable/ic_check" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/closeOpenWithDelay"-->
+<!--            style="@style/TextSmall"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:drawablePadding="2dp"-->
+<!--            android:ellipsize="end"-->
+<!--            android:gravity="center"-->
+<!--            android:maxLines="1"-->
+<!--            android:paddingHorizontal="8dp"-->
+<!--            android:text="@string/no"-->
+<!--            android:textSize="12sp"-->
+<!--            app:drawableTopCompat="@drawable/ic_close" />-->
+<!--    </LinearLayout>-->
+
+
 
 </FrameLayout>
